wtmp: fix wtmp file on solaris and netbsd

This commit moves detection of the location
of the wtmp file to configure and fixes that
detection to work on Solaris and NetBSD.

https://bugs.freedesktop.org/show_bug.cgi?id=90882